# jsonstreams

./: .bumpversion.cfg  .editorconfig  .gitignore  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  pylintrc  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yml  lint.yml  linux.yml
docs/: Makefile  make.bat
docs/source/: api.rst  changes.rst  conf.py  description.rst  examples.rst  index.rst
jsonstreams/: __init__.py  __init__.pyi  _cython.pyx  _python.py  exceptions.py
tests/: pylintrc  test_stream.py
