[bdist_wheel]
universal=1

[pycodestyle]
ignore =
    E501

[metadata]
name = jsonstreams
version = 0.6.0
description = A JSON stream writer
long_description = file: README.rst
url = https://github.com/dcbaker/jsonstreams
author = Dylan Baker
author_email = dylan@pnwbakers.com
keywords = JSON stream
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers

[options]
pacakges = jsonstreams
include_package_data = true
install_requires =
    six
    enum34; python_version < "3.4"
python_requires = >= 3.6.0

[options.extras_require]
recomended = simplejson
test = tox
lint =
    mypy
    pydocstyle
    pycodestyle
    pylint

[options.package_data]
* = *.pyi
